Add building codes
